correct row/column nesting for sources etc

--- a/index.html
+++ b/index.html
@@ -695,13 +695,20 @@
 
 
 <div class="container-fluid module" id="footer">
-    <div class="gutter"></div>
+    <div class="row">
+        <div class="col-12">
+            <div class="gutter"></div>
+        </div>
+    </div>
 
     <!-- Sources list -->
-    <div class="row justify-content-center">
-        <h3 class="dark-title">Sources<br></h3>
+    <div class="row">
+        <div class="col-12 text-center">
+            <h3 class="dark-title">Sources<br></h3>
+        </div>
     </div>
     <div class="row">
+        <div class="col-12">
         <!-- For the moment, would like to add card bootstrapping with auto-rowing columns to list these -->
         <ul>
             <li>Wikipedia contributors. (2022, October 23). List of awards and nominations received by Dolly Parton.
@@ -719,14 +726,21 @@
                 <a href ="https://www.census.gov/library/visualizations/time-series/demo/census-poverty-tool.html">https://www.census.gov/library/visualizations/time-series/demo/census-poverty-tool.html</a></li>
             <li>Donations and other Biographical Info: Many open source sources</li>
         </ul>
+        </div>
     </div>
 
-    <div class="big-gutter"></div>
+    <div class="row">
+        <div class="col-12">
+            <div class="big-gutter"></div>
+        </div>
+    </div>
 
     <!-- About us section -->
     <a id="team"></a>
-    <div class="row justify-content-center">
-        <h3 class="dark-title">Project Team</h3>
+    <div class="row">
+        <div class="col-12 text-center">
+            <h3 class="dark-title">Project Team</h3>
+        </div>
     </div>
     <div class="row justify-content-between" id = "cardcontainer">
         <div class="col-4">
@@ -764,8 +778,6 @@
             </div>
         </div>
     </div>
-
-
 </div>
 
 <div class="left-menu">
