fix video positioning and clipping

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 <a id="top"></a>
 <div class="container-fluid module" id="cover">
     <div class="row">
-        <div class="col-12" style="height: 90vh; width:100%;">
+        <div class="col-12" style="height: 90vh">
             <div class="vidContain">
                 <iframe class="vid" title="vimeo-player"
                         src="https://player.vimeo.com/video/366269951?h=a0fbd7f75a&autoplay=1&loop=1&autopause=0&muted=1&background=1"
                         allow="autoplay; fullscreen"></iframe>
             </div>
-        </div>
-        <div id="text">
-            <h1 id="text-cover">DOLLY PARTON</h1>
+            <div id="text">
+                <h1 id="text-cover">DOLLY PARTON</h1>
+            </div>
         </div>
     </div>
 </div>
