correct row/column nesting for timeline vis

--- a/index.html
+++ b/index.html
@@ -254,7 +254,11 @@
 <!-- Title and external legend side by side, plot underneath that, slider underneath the timeline -->
 <a id="musicalhistory"></a>
 <div class="container-fluid module fader4" id="module-2">
-    <div class="gutter"></div>
+    <div class="row">
+        <div class="col-12">
+            <div class="gutter"></div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-12" id="vis-2-title" style="height: 100%; white-space: nowrap; padding: 1.5%" >
             <h1 class="vis-title title fader3" >Billboard Hot 100: A Brief Musical History
@@ -281,20 +285,29 @@
 
     </div>
 
-    <div class="row" id="vis-2" style="height: 60vh; width:100%;">
-        <!-- Row with the timeline vis -->
+    <div class="row">
+        <div class="col-12" id="vis-2" style="height: 60vh; width:100%;">
+            <!-- Cell with the timeline vis -->
+        </div>
     </div>
     <div class="row">
-        <h3 class="vis-title title" style="color: white"> Explore other decades! </h3>
+        <div class="col-12">
+            <h3 class="vis-title title" style="color: white"> Explore other decades! </h3>
+        </div>
     </div>
 
     <div class="row" id="vis-2-slider">
-        <!-- Row with custom slider for the timeline can go here -->
+        <div class="col-12">
+            <!-- Cell with custom slider for the timeline can go here -->
+        </div>
     </div>
 
-    <div class="gutter"></div>
-    <div class="gutter"></div>
-
+    <div class="row">
+        <div class="col-12">
+            <div class="gutter"></div>
+            <div class="gutter"></div>
+        </div>
+    </div>
 </div>
 
 <div class="container-fluid module timeawardsmerge justify-content-center">
