--- a/index.html
+++ b/index.html
@@ -433,7 +433,6 @@
 
             <div class="big-gutter"></div>
 
-
             <div style="height: 80vh" id="selectorAll">
                 <!-- All -->
                 <h4 class="title ">
@@ -545,6 +544,7 @@
             </div>
         </div>
     </div>
+    <div class="big-gutter"></div>
 </div>
 
 <div class="big-gutter"></div>
