avoid the horizontal scrollbar on smaller windows

--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
     </div>
     <div class="row justify-content-between" id = "cardcontainer">
         <div class="col-4">
-            <div class="card border-dark mb-3" style="width: 25rem;">
+            <div class="card border-dark mb-3">
                 <div class="card-body text-dark">
                     <h5 class="card-title">Isidora Diaz</h5>
                     <img src="img/isidora.jpeg">
@@ -756,7 +756,7 @@
             </div>
         </div>
         <div class="col-4">
-            <div class="card border-dark mb-3" style="width: 25rem;">
+            <div class="card border-dark mb-3">
                 <div class="card-body text-dark">
                     <h5 class="card-title">Hope Neveux</h5>
                     <img src="img/hope.jpeg">
@@ -768,7 +768,7 @@
             </div>
         </div>
         <div class="col-4">
-            <div class="card border-dark mb-3" style="width: 25rem;">
+            <div class="card border-dark mb-3">
                 <div class="card-body text-dark">
                     <h5 class="card-title">Loralee Ryan</h5>
                     <img src="img/loralee.jpeg">
