--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
     </div>
 </div>
 
-<div class="left-menu">
+<div class="left-menu" id="left-menu">
     <div style="flex-grow: 1"></div>
     <div style="padding-left: 0.5em">
         <div style="float: left; width: 0px; height: 100%">
