fix more html warnings

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href='css/index.css'>
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/nouislider.css">
-    <link rel="stylesheet" href="css/dendrogram.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -378,8 +377,8 @@
 
         </div>
         <div class="col-4">
-            <img class = "fader4" src="img/grammy.webp" class="fader2" alt="...">
-            <p class = "fader3" style = font-size:medium;> <br> Dolly at her 50th Grammy nomination</p>
+            <img class = "fader4" src="img/grammy.webp" alt="...">
+            <p class = "fader3" style="font-size:medium"> <br> Dolly at her 50th Grammy nomination</p>
         </div>
     </div>
 
@@ -714,8 +713,8 @@
         <ul>
             <li>Wikipedia contributors. (2022, October 23). List of awards and nominations received by Dolly Parton.
                 <em>In Wikipedia, The Free Encyclopedia.</em></li>
-            <i>Wikipedia contributors. (2022, November 13). List of songs recorded by Dolly Parton.
-                <em>In Wikipedia, The Free Encyclopedia.</em></i>
+            <li>Wikipedia contributors. (2022, November 13). List of songs recorded by Dolly Parton.
+                <em>In Wikipedia, The Free Encyclopedia.</em></li>
             <li>Dhruvil Dave. (2021). Billboard "The Hot 100" Songs[Data set]. Kaggle.</li>
             <li>Adnan Anam. (2022). Spotify Artist Stats[Data set]. Kaggle.</li>
             <li>Dollywood Foundation Form 990 filings (2001-2020). IRS, via ProPublica Nonprofit Explorer</li>
@@ -820,7 +819,7 @@
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
 <!-- Load Underscore.js, a utility library for operating on arrays (filter, sort, min, max) -->
-<script src='https://rawgit.com/jashkenas/underscore/master/underscore-min.js'></script>
+<script src="https://rawgit.com/jashkenas/underscore/master/underscore-min.js"></script>
 <!--jQuery-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <!-- d3 -->
@@ -835,13 +834,13 @@
 <!-- date selector for charity visualization -->
 <script src="https://unpkg.com/d3-simple-slider"></script>
 <!-- JS -->
-<script src='js/StreamStats.js'></script>
+<script src="js/StreamStats.js"></script>
 <script src="js/BubbleVis.js"></script>
 <script src="js/MiniDendro.js"></script>
-<script src='js/TimeSeries.js'></script>
-<script src='js/Awards.js'></script>
-<script src='js/Charity.js'></script>
-<script src='js/BarGraph.js'></script>
+<script src="js/TimeSeries.js"></script>
+<script src="js/Awards.js"></script>
+<script src="js/Charity.js"></script>
+<script src="js/BarGraph.js"></script>
 <script src="js/main.js"></script>
 
 </body>
