--- a/index.html
+++ b/index.html
@@ -139,20 +139,17 @@
 
             <div style="height: 50vh" id="bubble-first-text">
                 <p class="fader2">Ranging from classic country legend <em>Johnny Cash</em> to pop country hit
-                    <em>Luke Bryan</em>, country
-                    music casts a wide net. Still, it's sound is unique to the United States. A bubble that doesn't
-                    stand out in the presence of
-                    <em>Taylor Swift</em> and <em>Elvis Presley</em> is renowned artist <em> Dolly Parton</em>.</p>
+                    <em>Luke Bryan</em>, country music casts a wide net. Still, it's sound is unique to the United States.
+                    Many country artists, including Taylor Swift, have cited Dolly Parton as a major influence. We
+                demonstrate her influence here by showing her collaborations - Dolly has collaborated with almost half
+                of the country artists to make the Hot 100 List.
+                <br>
+                    She did not collaborate with Elvis, but he originally tried to buy the rights to "I Will Always
+                    Love You"
+                </p>
             </div>
             <div style="height: 60vh" id="bubble-second-text">
-                <p class="fader2">Despite her comparatively small impact on the Billboards, she is famous for
-                    more than her solo music career.
-                    Out of these major players on the Billboards, she has collaborated with 14 of them. Taylor Swift
-                    has
-                    stated she would not be where she was without Dolly's influence.
-                    be higher, as many people wanted to record
-                    the infamous song eventually performed by <em>Whitney Huston</em>, <em>I Will Always Love
-                        You</em>. <em>Elvis Presley</em> was one of them.
+                <p class="fader2">
                 </p>
             </div>
         </div>
@@ -612,7 +609,7 @@
                 <br><br>
 
                 Dolly's biggest influence is probably the purchase and continued expansion of
-                Dollywood, a thempark in Sevier. An assessment by the Tennessee Department of Transportation estimates the
+                Dollywood, a themepark in Sevier. An assessment by the Tennessee Department of Transportation estimates the
                 economic impact of Dollywood to be ~1.8 billion per year. Dollywood currently employs ~11,000
                 people.
                 The impacts of a successful tourist attraction in an impoverished region cannot be overstated.
@@ -750,7 +747,7 @@
                     <img src="img/isidora.jpeg">
                     <h6 class="card-subtitle mb-2 text-muted">Harvard University</h6>
                     <h6 class="card-subtitle mb-2 text-muted">Data Science MS Candidate</h6>
-                    <p class="card-text">...</p>
+                    <p class="card-text"></p>
                 </div>
             </div>
         </div>
@@ -761,8 +758,7 @@
                     <img src="img/hope.jpeg">
                     <h6 class="card-subtitle mb-2 text-muted">Harvard University</h6>
                     <h6 class="card-subtitle mb-2 text-muted">Data Science MS Candidate</h6>
-                    <p class="card-text">Passionate about accessible, digestible, honest, and impactful
-                        visualization.</p>
+                    <p class="card-text"></p>
                 </div>
             </div>
         </div>
@@ -773,7 +769,7 @@
                     <img src="img/loralee.jpeg">
                     <h6 class="card-subtitle mb-2 text-muted">Harvard University</h6>
                     <h6 class="card-subtitle mb-2 text-muted">Data Science MS Candidate</h6>
-                    <p class="card-text">...</p>
+                    <p class="card-text"></p>
                 </div>
             </div>
         </div>
