--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <br><br>
             </p>
             <p class="fader4">
-                She is also an icon for third-wave feminism, famously having styled herself after "the town tramp",
+                She is an icon for third-wave feminism, famously having styled herself after "the town tramp",
                 and choosing to create a look of exaggerated femininity at a time when women were pushing to
                 masculinize themselves to be taken seriously in the workplace. She is the first to laugh at her own
                 appearance, making it difficult for anyone to criticize her. When she found out that the cloned sheep
@@ -537,6 +537,11 @@
                     She was nominated for 2 Golden Globes in 1981 and 1 Golden Globe in 1984 for <em>Best Motion
                     Picture Actress</em> and <em>New Star of the Year</em>.
                 </h4>
+                <div class="gutter"></div>
+
+                <h4 class="title ">
+                    She is an EGOT nominee, having been at least nominated for an Emmy, a Grammy, an Oscar, and a Tony.
+                </h4>
             </div>
         </div>
     </div>
@@ -678,13 +683,14 @@
             <img src="img/dolly_bw_closing.jpg" width="600">
         </div>
         <div class="col-6">
-            <h3 class="title fader3">For decades, Dolly Parton has shown resilience, elegance in the face of adversity,
-                and a strong commitment to making the lives of people better. She asks for nothing in return, and 
-                practice humanitarianism even when cameras are not rolling.
+            <h3 class="title fader3">Beholden to no one but herself and her love for her art, Dolly Parton managed
+                evolve into someone often described as a "National Treasure" thanks to her musical talent, her business
+                ingenuity, her careful maneuvering to stay away from controversy, her tendency to be genuinely kind to
+                everyone, and her extreme generosity.
             </h3>
             <div class="gutter"></div>
             <h3 class="title fader3">
-                As a woman of many talents, she is an inspiration to music, performance, and humanity.
+                After careful review of the data, we agree with the assessment.
             </h3>
         </div>
     </div>
